# snort_module

./: .gitignore  CMakeLists.txt  MaliciousIPAddr.csv  MaliciusIPAddr.csv  README.md  snort.lua  snort_install.sh
Snort2File/: DangerousIPAddr.csv  MaliciusIPAddr.csv  TestRules.rules  spp_heuristic.c  spp_heuristic.h
configFiles/: test.csv
src/: CMakeLists.txt
src/heuristic/: CMakeLists.txt  config.cpp  config.hpp  create_module.cpp  create_module.hpp  dangerous_ip_addr.cpp  dangerous_ip_addr.hpp  flag.cpp  flag.hpp  flag_config.cpp  flag_config.hpp  flag_config_old.cpp  flag_config_old.hpp  flag_default_value.hpp  flag_factory.cpp  flag_factory.hpp  heuristic.cpp  heuristic.hpp  heuristic_inspector.cpp  heuristic_inspector.hpp  heuristic_module.cpp  heuristic_module.hpp  heuristic_types.cpp  heuristic_types.hpp  parameters_name.hpp  risk_flag.cpp  risk_flag.hpp  utils.cpp  utils.hpp
